Feat/9670 update admin lookup endpoint to retrieve review status and deprecation info (#7250)
* feat: Add reviewed status to lookup endpoint response

* feat: Add primary record if user is deprecated to lookup endpoint response

---------

Co-authored-by: Daniel Palafox <daniel.p4l4fox@gmail.com>
Co-authored-by: Angel Montenegro <a.montenegro@orcid.org>